--- a/parallax/paralax.html
+++ b/parallax/paralax.html
@@ -48,6 +48,13 @@
 		.parallax-3 {
 			background-image: url(./images/counter-strike-2.jpg);
 		}
+		footer {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+			clear: both;
+		}
 	</style>
 </head>
 
@@ -84,5 +91,6 @@
 			Counter-Strike 2 is a 2023 free-to-play tactical first-person shooter game developed and published by Valve Corporation. It is the successor to Counter-Strike: Source and Counter-Strike: Global Offensive, and the eighth main installment in the Counter-Strike series. The game was announced in March 2023, and was released on September 21, 2023, for Windows and macOS. Counter-Strike 2 features updated graphics, new gameplay mechanics, and revamped game modes. The game's competitive scene has been praised, with many professional players and teams competing in tournaments and leagues.
 			</p>
 		</div>
+	<footer>&copy; 2024 Rahul Jangir. All rights reserved.</footer>
 	</body>
 	</html>
